<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.tabs.TabPanelFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/add_categories"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddCategoryClothes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/round"
        android:fontFamily="@font/arbutus"
        android:text="@string/horrors"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerAddCategory" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddCategoryShoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/round"
        android:fontFamily="@font/arbutus"
        android:text="@string/fantastic"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddCategoryClothes" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddCategoryAccessories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/round"
        android:fontFamily="@font/arbutus"
        android:text="@string/action_movie"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddCategoryShoes" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/addProduct"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonAddCategoryAccessories" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sectionEnterNameProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/labelEnterNameProduct"
        app:boxBackgroundColor="@android:color/white"
        app:boxStrokeColor="#F8F8F8"
        app:boxStrokeWidth="0dp"
        app:endIconMode="clear_text"
        app:endIconTint="@android:color/holo_red_light"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerAddProduct">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNameProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sectionEnterCategoryProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/labelEnterCategory"
        app:boxBackgroundColor="@android:color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="4dp"
        app:endIconMode="clear_text"
        app:endIconTint="@android:color/holo_red_light"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sectionEnterNameProduct"
        app:startIconTint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterCategoryProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sectionEnterPriceProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/labelEnterPriceProduct"
        app:boxBackgroundColor="@android:color/white"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="4dp"
        app:endIconMode="clear_text"
        app:endIconTint="@android:color/holo_red_light"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sectionEnterCategoryProduct"
        app:startIconTint="@color/purple_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPriceProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="number"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/sectionResEnterProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/sectionEnterPriceProduct">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resEnterNameProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/purple_500" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resEnterCategoryProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/purple_500" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resEnterPriceProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/purple_500" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:background="@drawable/round"
        android:clickable="false"
        android:fontFamily="@font/arbutus"
        android:text="@string/addProduct"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/sectionResEnterProduct"
        tools:layout_editor_absoluteX="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>